--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+  <title>A simple app | <%=@title%></title>
 </head>
 <body>
 
